karnc/tests/fixtures/positive/99_cross_context_with_money/src/commerce/money.karn
commons commerce.money

type Money = {
  minorUnits: Int where NonNegative,
}
