karnc/tests/fixtures/negative/78_alias_conflicts_with_type/src/commerce/orders.karn
context commerce.orders

consumes commerce.payment as Money

type Money = Int where NonNegative
